force-app/main/default/objects/ILAddress__c/fields/Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Account_Id__c</fullName>
    <description>Temporary Field to be used for merging</description>
    <label>Account Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>