force-app/main/default/objects/ILAddress__c/fields/Account_Ids__c.field-meta.xml
<CustomField>
    <fullName>Account_Ids__c</fullName>
    <description>Temporary field for merging address on Accounts</description>
    <label>Account Ids</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>