force-app/main/default/objects/ILAddress__c/fields/Address_Verified__c.field-meta.xml
<CustomField>
    <fullName>Address_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Temporary field for users to verify the validated addresses</description>
    <label>Address Verified</label>
    <type>Checkbox</type>
</CustomField>