force-app/main/default/objects/ILAddress__c/fields/Check_House_Number_with_dashes__c.field-meta.xml
<CustomField>
    <fullName>Check_House_Number_with_dashes__c</fullName>
    <formula>IF(ISBLANK(Street__c),&quot;&quot;,
IF(NOT(ISBLANK(HouseNumberAddition__c)), Street__c &amp; &quot; &quot; &amp; HouseNumber__c  &amp; &quot;-&quot; &amp; HouseNumberAddition__c, Street__c &amp; &quot; &quot; &amp; HouseNumber__c))</formula>
    <label>Check House Number with dashes</label>
    <type>Text</type>
</CustomField>