force-app/main/default/objects/ILAddress__c/fields/HouseNumberAddition__c.field-meta.xml
<CustomField>
    <fullName>HouseNumberAddition__c</fullName>
    <label>House Number Addition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>