force-app/main/default/objects/ILAddress__c/fields/HouseNumberAdditionCheck__c.field-meta.xml
<CustomField>
    <fullName>HouseNumberAdditionCheck__c</fullName>
    <formula>HouseNumber__c &amp; &quot;-&quot; &amp; HouseNumberAddition__c</formula>
    <label>House Number Addition Check</label>
    <type>Text</type>
</CustomField>