force-app/main/default/objects/ILAddress__c/fields/HouseNumberAdditionFormatted__c.field-meta.xml
<CustomField>
    <fullName>HouseNumberAdditionFormatted__c</fullName>
    <formula>TRIM(UPPER(HouseNumberAddition__c))</formula>
    <label>House Number Addition Formatted</label>
    <type>Text</type>
</CustomField>