force-app/main/default/objects/ILAddress__c/fields/IncludeBulkValidate__c.field-meta.xml
<CustomField>
    <fullName>IncludeBulkValidate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set to true if this record should be included in the bulk/batch record validate job</description>
    <inlineHelpText>Set to true if this record should be included in the bulk/batch record validate job</inlineHelpText>
    <label>Include Bulk Validate</label>
    <type>Checkbox</type>
</CustomField>