force-app/main/default/objects/ILAddress__c/fields/LegacyAddress__c.field-meta.xml
<CustomField>
    <fullName>LegacyAddress__c</fullName>
    <description>Stores the old address in full before validation and splitting of the address done by the Plauti RV tool</description>
    <inlineHelpText>Street; City; PostalCode; Country</inlineHelpText>
    <label>Legacy Address</label>
    <type>TextArea</type>
</CustomField>