force-app/main/default/objects/ILAddress__c/fields/PostalCodeFormatted__c.field-meta.xml
<CustomField>
    <fullName>PostalCodeFormatted__c</fullName>
    <formula>UPPER(TRIM(SUBSTITUTE(PostalCode__c, &quot; &quot;, &quot;&quot;)))</formula>
    <label>Postal Code Formatted</label>
    <type>Text</type>
</CustomField>