force-app/main/default/objects/ILAddress__c/fields/rv2StatusCode__c.field-meta.xml
<CustomField>
    <fullName>rv2StatusCode__c</fullName>
    <label>RV Status Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>