force-app/main/default/objects/ILAddress__c/fields/rv2StatusMessage__c.field-meta.xml
<CustomField>
    <fullName>rv2StatusMessage__c</fullName>
    <label>RV Status Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>