force-app/main/default/objects/ILAddress__c/fields/rv2Validation__c.field-meta.xml
<CustomField>
    <fullName>rv2Validation__c</fullName>
    <label>RV Validation Result</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>