force-app/main/default/objects/ILAddress__c/fields/rv2ValidationDate__c.field-meta.xml
<CustomField>
    <fullName>rv2ValidationDate__c</fullName>
    <label>RV Validation Date</label>
    <type>DateTime</type>
</CustomField>