force-app/main/default/objects/ILAddress__c/fields/StateCode__c.field-meta.xml
<CustomField>
    <fullName>StateCode__c</fullName>
    <label>State Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>