force-app/main/default/objects/ILAddress__c/fields/Validated_Address__c.field-meta.xml
<CustomField>
    <fullName>Validated_Address__c</fullName>
    <formula>IF(ISPICKVAL(rv2Status__c, &apos;GREEN&apos;), true, false)</formula>
    <label>Validated Address</label>
    <type>Checkbox</type>
</CustomField>