force-app/main/default/objects/ILAddress__c/fields/ValidationOverridden__c.field-meta.xml
<CustomField>
    <fullName>ValidationOverridden__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Validation Overridden</label>
    <type>Checkbox</type>
</CustomField>