force-app/main/default/objects/ILAddress__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Street__c</columns>
    <columns>HouseNumber__c</columns>
    <columns>HouseNumberAddition__c</columns>
    <columns>PostalCode__c</columns>
    <columns>City__c</columns>
    <columns>Country__c</columns>
    <columns>rv2Status__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Street__c</field>
        <operation>contains</operation>
        <value>box</value>
    </filters>
    <label>All</label>
</ListView>